# deriv-tech-interview

./: .dockerignore  .env.example  .gitignore  .vector_query_cache.json  Dockerfile  README.md  api_main.py  communications.md  config.py  failure_mode_taxonomy.json  historical_incidents.json  implementation_plan.md  incident_metrics.json  llm_calls.jsonl  main.py  mttr_analysis.md  postmortem_a.md  postmortem_b.md  predictive_signals.json  pyproject.toml  root_cause_analysis.json  systemic_actions.md  task.md  timelines.json  validate.py
.claude/: settings.local.json
api/: app.py  job_store.py  schemas.py
api/routes/: artifacts.py  pipeline.py  search.py
models/: __init__.py  incident.py  llm_call.py  log_entry.py  postmortem.py  root_cause.py  timeline.py
parsed_logs/: incident_a.json  incident_b.json
pipeline/: __init__.py  graph.py  incident_windows.py  llm_client.py  log_parser.py  optional_analyses.py  postmortem_generator.py  root_cause_analyzer.py  state.py  systemic_actions.py  timeline_builder.py  vector_store.py
prompts/: __init__.py  communication_drafts.py  failure_taxonomy.py  mttr_analysis.py  postmortem_generation.py  predictive_signals.py  root_cause_analysis.py  timeline_reconstruction.py
